<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/txvRide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:fontFamily="casual"
        android:text="@string/ride"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="144dp" />

    <TextView
        android:id="@+id/txvOrigin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="8dp"
        android:fontFamily="casual"
        android:text="@string/origin"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/txtOrigin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.085"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/txvDest"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="24dp"
        android:fontFamily="casual"
        android:text="@string/dest"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/txtDest"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.096"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtOrigin"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/txtOrigin"
        android:layout_width="265dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="10dp"
        android:ems="10"
        android:fontFamily="casual"
        android:inputType="textPersonName"
        android:text="@string/originPlace"
        app:layout_constraintEnd_toStartOf="@+id/btnScanOri"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="133dp"
        />

    <EditText
        android:id="@+id/txtDest"
        android:layout_width="261dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:ems="10"
        android:fontFamily="casual"
        android:inputType="textPersonName"
        android:text="@string/destPlace"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="251dp" />

    <Button
        android:id="@+id/btnScanDest"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="216dp"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="8dp"
        android:fontFamily="casual"
        android:text="@string/scan"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/txtDest" />

    <Button
        android:id="@+id/btnScanOri"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:fontFamily="casual"
        android:text="@string/scan"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/btnScanDest"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/txtOrigin"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.683" />

</android.support.constraint.ConstraintLayout>