<?xml version="1.0" encoding="utf-8"?>
<!-- Use DrawerLayout as root container for activity -->
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <!-- Layout to contain contents of main body of screen (drawer will slide over this) -->
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.v7.widget.Toolbar
            android:id="@+id/main_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="GoGoGicha"
            android:fontFamily="casual"
            android:textSize="30sp"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:textStyle="bold"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="50dp"/>

        <EditText
            android:id="@+id/txtUsername"
            android:layout_width="306dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/username"
            android:inputType="textPersonName"
            android:fontFamily="casual"
            android:layout_gravity="center"
            android:layout_marginBottom="20dp"/>

        <EditText
            android:id="@+id/txtPassword"
            android:layout_width="305dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:fontFamily="casual"
            android:layout_gravity="center"
            android:layout_marginBottom="20dp"/>

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:fontFamily="casual"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"/>

        <Button
            android:id="@+id/btnLoginFB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="casual"
            android:text="@string/loginFB"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"/>

        <TextView
            android:id="@+id/btnSignUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/signup"
            app:layout_constraintBottom_toBottomOf="parent"
            android:fontFamily="casual"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:textColor="@color/wallet_holo_blue_light"
            android:layout_marginTop="20dp"/>
    </LinearLayout>

    <!-- Container for contents of drawer - use NavigationView to make configuration easier -->
    <android.support.design.widget.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        app:menu="@menu/drawer_view"
        app:headerLayout="@layout/nav_header"/>

</android.support.v4.widget.DrawerLayout>
