<?xml version="1.0" encoding="utf-8"?>
<!-- Use DrawerLayout as root container for activity -->
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <!-- Layout to contain contents of main body of screen (drawer will slide over this) -->
    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="50dp"
        android:orientation="vertical">

        <android.support.v7.widget.Toolbar
            android:id="@+id/payment_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/arrived"
            android:fontFamily="casual"
            android:textSize="24sp"
            android:layout_gravity="center"
            android:textAlignment="center"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/payment"
            android:fontFamily="casual"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:layout_marginTop="40dp"
            android:textSize="16sp"/>

        <TextView
            android:id="@+id/txvPayment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Rp 0"
            android:fontFamily="casual"
            android:textSize="24sp"
            android:textStyle="bold"
            android:textAlignment="center"
            android:layout_marginTop="30dp"/>

        <Button
            android:id="@+id/btnFinish"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:fontFamily="casual"
            android:text="@string/finish"
            android:layout_gravity="center"
            android:layout_marginTop="100dp"/>

    </LinearLayout>

    <!-- Container for contents of drawer - use NavigationView to make configuration easier -->
    <android.support.design.widget.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        app:menu="@menu/drawer_view"
        app:headerLayout="@layout/nav_header"/>

</android.support.v4.widget.DrawerLayout>