<?xml version="1.0" encoding="utf-8"?>
<!-- Use DrawerLayout as root container for activity -->
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <!-- Layout to contain contents of main body of screen (drawer will slide over this) -->
    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.v7.widget.Toolbar
            android:id="@+id/home_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="My Balance"
                android:textStyle="bold"
                android:layout_marginLeft="170dp"
                android:fontFamily="casual"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Rp 0"
                android:fontFamily="casual"
                android:layout_marginLeft="10dp"
                android:textStyle="bold"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <ImageView
                android:id="@+id/imvOnRide"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:src="@drawable/ic_ride"
                android:layout_gravity="center"
                android:layout_marginTop="12dp"/>
            <TextView
                android:id="@+id/txvOnRide"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ride"
                android:layout_gravity="center"
                android:fontFamily="casual"
                android:textStyle="bold"/>
            <ImageView
                android:id="@+id/imvHistory"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:src="@drawable/ic_history"
                android:layout_gravity="center"
                android:layout_marginTop="12dp"/>
            <TextView
                android:id="@+id/txvHistory"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/history"
                android:layout_gravity="center"
                android:fontFamily="casual"
                android:textStyle="bold"/>
            <ImageView
                android:id="@+id/imvAccount"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:src="@drawable/ic_user"
                android:layout_gravity="center"
                android:layout_marginTop="12dp"/>
            <TextView
                android:id="@+id/txvAccount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/account"
                android:layout_gravity="center"
                android:fontFamily="casual"
                android:textStyle="bold"/>
        </LinearLayout>
    </LinearLayout>

    <!-- Container for contents of drawer - use NavigationView to make configuration easier -->
    <android.support.design.widget.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        app:menu="@menu/drawer_view"
        app:headerLayout="@layout/nav_header"/>

</android.support.v4.widget.DrawerLayout>